# better-agent-terminal

./: .env.local.example  .gitignore  AGENTS.md  CLAUDE.md  Procfile.tauri  Procfile.verify  README.md  index.html  install.sh  package-lock.json  package.json  pnpm-lock.yaml  runtime-catalog.json  tsconfig.json  vite.config.ts  vite.tauri.config.ts
.github/workflows/: release-tag-dispatch.yml  release.yml  tauri-pre-ci.yml
choco/tools/: chocolateyinstall.ps1
electron/: claude-agent-manager.ts  codex-agent-manager.ts  main.ts  openai-agent-manager.ts  preload.ts  profile-manager.ts  pty-input.ts  pty-manager.ts  worktree-manager.ts
electron/codex-agent/: response-items.ts  session-log.ts  stream-items.ts  types.ts
electron/openai-agent/: api-key.ts
electron/openai-tools/: ask-user.ts  context.ts  registry.ts
electron/remote/: handler-registry.ts  protocol.ts  remote-server.ts  secrets.ts
electron/server-core/: register-handlers.ts
node-sidecar/: .npmrc  package.json  pnpm-lock.yaml
node-sidecar/runtime/: README.md
node-sidecar/scripts/: bench-startup.mjs  inspect-transcript-schema.mjs  spike-debug-pty.mjs  spike-live-claude-cli.mjs  verify-classify-transcripts.mjs
node-sidecar/src/: server.mjs
node-sidecar/src/handlers/: agent.mjs  claude-auth.mjs  claude-channel.mjs  claude-cli.mjs  claude-history.mjs  claude-mcp.mjs  claude-permission.mjs  claude-readonly.mjs  claude-send.mjs  claude-session.mjs  codex.mjs  fs-watch.mjs  fs.mjs  git.mjs  github.mjs  image.mjs  openai.mjs  profile.mjs  remote-tunnel.mjs  settings.mjs  snippet.mjs  update.mjs  worktree.mjs
node-sidecar/src/lib/: claude-effort.mjs  data-paths.mjs  live-query.mjs  logger.mjs  models.mjs  path-guard.mjs  plugins.mjs  protocol.mjs  remote-bridge.mjs  remote-broadcast.mjs  remote-certificate.mjs  remote-client-impl.mjs  remote-fingerprint.mjs  remote-protocol.mjs  remote-secrets.mjs  remote-server-impl.mjs  sdk-loader.mjs  skills.mjs  snippet-db.mjs  state.mjs
node-sidecar/src/runtimes/: claude-channel-capabilities.mjs  claude-channel-frames.mjs  claude-channel-hooks.mjs  claude-channel-runtime.mjs  claude-channel-server.mjs  claude-cli-capabilities.mjs  claude-cli-frames.mjs  claude-cli-runtime.mjs  (+1 more)
node-sidecar/tests/: claude-channel-runtime.test.mjs  claude-cli-runtime.test.mjs  claude-cli.test.mjs  server.test.mjs
plans/: auto-update-plan.md  claude-channel-agent-plan.md  claude-cli-transcript-agent-plan.md  headless-server-decouple.md  mobile-terminal-viewport-mode.md  runtime-setup-install-plan.md  tauri-completion-plan.md  tauri-migration-plan.md  websocket.md
renderer/src/: App.tsx  host-api.ts  i18n.ts  main.tsx
scripts/: after-pack.js  build-node-sidecar.mjs  build-version.js  check-tauri-preview-readiness.mjs  check-tauri-resources.mjs  fetch-node-runtime.mjs  generate-update-manifest.mjs  normalize-release-asset-names.mjs  prepare-tauri-codex-runtime.mjs  prepare-tauri-sidecar-node-modules.mjs  prune-node-sidecar-modules.mjs  run-tauri-dev-local.mjs  rust-base-cache-key.mjs  sign-macos-resource-binaries.sh  stage-updater-artifacts.mjs  sync-runtime-catalog.mjs  tauri-build-mode.mjs  tauri-resource-cache-keys.mjs  verify-packaged-claude-binaries.js  verify-release-asset-sizes.js
src/: App.tsx  host-api.ts  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.all-in-one.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: account_store.rs  app_data.rs  app_menu.rs  claude_usage.rs  codex_account_store.rs  codex_app_server.rs  codex_auth.rs  electron_safe_storage.rs  event_hub.rs  host_context.rs  lib.rs  linux_wayland.rs  log_file.rs  main.rs  network_addresses.rs  path_guard.rs  remote_client.rs  remote_core.rs  remote_server.rs  runtime_catalog.rs  sidecar.rs  subprocess.rs  window_registry.rs
src-tauri/src/commands/: agent.rs  app.rs  claude.rs  claude_channel.rs  claude_cli.rs  clipboard.rs  debug.rs  dialog.rs  fs.rs  fugu.rs  git.rs  github.rs  image.rs  mod.rs  notification.rs  openai.rs  profile.rs  pty.rs  remote.rs  runtime.rs  settings.rs  shell.rs  snippet.rs  tunnel.rs  update.rs  worker_buffer.rs  workspace.rs  worktree.rs
src-tauri/windows/: installer.nsi  nsis-hooks.nsh
src/components/: ActivityIndicator.tsx  ClaudeAgentPanel.tsx  CodexAgentPanel.helpers.ts  CodexAgentPanel.tsx  CodexAgentPanel.types.ts  FileTree.tsx  FolderPicker.tsx  OpenAIAgentPanel.tsx  PathLinker.tsx  ProfilePanel.tsx  PromptBox.tsx  SettingsPanel.tsx  Sidebar.tsx  TerminalPanel.tsx  TerminalThumbnail.tsx  ThumbnailBar.tsx  UpdateNotification.tsx  WorkerPanel.tsx  WorkspaceView.tsx
src/locales/: en.json  zh-CN.json  zh-TW.json
src/stores/: notification-store.ts  settings-store.ts  use-store.ts  workspace-store.ts
src/styles/: claude-agent.css  panels.css
src/types/: agent-presets.ts  agent-profiles.ts  electron.d.ts
src/utils/: chat-markdown.ts  claude-model-presets.ts
tests/: agent-preset-debug-gate.test.ts  agent-task-tree.test.ts  ask-user-question.test.ts  build-version-script.test.mjs  chat-markdown-table-repair.test.ts  check-tauri-preview-readiness.test.mjs  check-tauri-resources.test.mjs  claude-message-guards.test.ts  codex-auto-continue.test.ts  codex-panel-regression.test.ts  console-test.js  generate-update-manifest.test.mjs  host-api.test.ts  host-claude-coverage.test.ts  host-direct-calls.test.ts  input-history-navigation.test.ts  keyboard-shortcuts.test.ts  normalize-release-asset-names.test.mjs  openai-direct-cleanup.test.ts  prepare-tauri-codex-runtime.test.mjs  prune-node-sidecar-modules.test.mjs  pty-input-writer.test.ts  pty-input.test.ts  renderer-logging.test.ts  runtime-catalog-sync.test.mjs  rust-base-cache-key.test.mjs  snippet-command.test.ts  tauri-capabilities.test.mjs  tauri-dynamic-window-smoke.test.ts  tauri-launch.test.ts  tauri-resource-cache-keys.test.mjs  tauri-sidecar-minimal-modules.test.mjs  tauri-version-sync.test.mjs  tauri-windows-installer.test.mjs  workspace-move-drag.test.ts  workspace-reorder.test.ts  workspace-restore-focus.test.ts  workspace-sdk-session-owner.test.ts
(+82 files in other folders)
